--- a/parser/package.json
+++ b/parser/package.json
@@ -6,12 +6,16 @@
     "start": "node ./node_modules/nodemon/bin/nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.5",
     "body-parser": "~1.13.2",
+    "cheerio": "^0.20.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "node-phantom-simple": "^2.2.4",
+    "phantomjs": "^2.1.7",
     "serve-favicon": "~2.3.0"
   }
 }
