--- a/parser/package.json
+++ b/parser/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "express-ejs-layouts": "^2.1.0",
     "mongoose": "^4.4.19",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.6.1",
     "node-phantom-simple": "^2.2.4",
     "nodemon": "^1.9.2",
