--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,12 @@
     "nodemon": "^1.9.2",
     "rc": "1.0.1",
     "sails": "~0.12.3",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-mongo": "^0.12.0"
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node ./node_modules/nodemon/bin/nodemon app.js"    
+    "start": "node ./node_modules/nodemon/bin/nodemon app.js"
   },
   "main": "app.js",
   "repository": {
